<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sam.gainsbysamcobcorperman.com.samuelstudios.gainsmaker.Quads"
    android:background="@color/red">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/legDay"/>


    <TextView
        android:layout_width="300dp"
        android:id="@+id/instruction"
        android:layout_height="wrap_content"
        android:text="@string/quadsIntro"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/one"
        android:textColor="@android:color/white"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/squats"
        android:id="@+id/squat"
        android:layout_below="@+id/adView1"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:src="@drawable/squaaaat"
        android:layout_below="@+id/squat"
        android:layout_centerHorizontal="true"
        android:id="@+id/squatPic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/squatsExp"
        android:id="@+id/squatsExp"
        android:textColor="@color/white"
        android:layout_below="@+id/squatPic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legExt"
        android:id="@+id/ext"
        android:textSize="18sp"
        android:layout_below="@id/squatsExp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/legextension3"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ext"
        android:id="@+id/legExtPic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legExtExp"
        android:id="@+id/extExp"
        android:textColor="@color/white"
        android:layout_below="@+id/legExtPic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legPress"
        android:id="@+id/press"
        android:textSize="18sp"
        android:layout_below="@id/extExp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:src="@drawable/legpress3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/press"
        android:id="@+id/legPresPic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legPressExp"
        android:id="@+id/pressExt"
        android:textColor="@color/white"
        android:layout_below="@+id/legPresPic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calfRaise"
        android:id="@+id/calf"
        android:textSize="18sp"
        android:layout_below="@id/pressExt"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/calfraise3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/calf"
        android:id="@+id/calfpic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calfRaiseExp"
        android:id="@+id/calfExp"
        android:textColor="@color/white"
        android:layout_below="@+id/calfpic"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id2"
        android:layout_below="@+id/instruction"
        >
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
</ScrollView>