<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sam.gainsbysamcobcorperman.com.samuelstudios.gainsmaker.Shoulders"
    android:background="@color/red"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoulderDay"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="32dp"
        android:textColor="@color/white"
        android:id="@+id/shouldIntro"
        android:layout_margin="8dp"
        />

    <TextView
        android:text="@string/shoulderIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/intro"
        android:layout_below="@id/shouldIntro"
     />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:layout_marginTop="8dp"
        ads:adUnitId="@string/banner_ad_unit_id5"
        android:layout_below="@+id/intro">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_below="@+id/adView1"
        android:id="@+id/shoulderPress"
        android:text="@string/shoulderPress"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/shoulderpress3"
        android:id="@+id/pressPic"
        android:layout_below="@+id/shoulderPress"
        android:layout_margin="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/pressPic"
        android:id="@+id/shoulderPressExp"
        android:text="@string/shoulderPressExp"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_below="@+id/shoulderPressExp"
        android:id="@+id/shrugs"
        android:text="@string/shrugs"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/shouldershrugs3"
        android:id="@+id/shrugsPic"
        android:layout_below="@+id/shrugs"
        android:layout_margin="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/shrugsPic"
        android:id="@+id/shrugsExp"
        android:text="@string/shrugsExp"
        android:layout_marginTop="0dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/shrugsExp"
        android:id="@+id/side"
        android:text="@string/sideRaise"
        android:textSize="18dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/sideraise"
        android:id="@+id/sidePic"
        android:layout_below="@+id/side"
        android:layout_margin="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/sidePic"
        android:id="@+id/sideExp"
        android:text="@string/sideRaiseExp"
        android:layout_marginTop="0dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/sideExp"
        android:id="@+id/flyes"
        android:textSize="18dp"
        android:text="@string/shoulderFlyes"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/reversemachines"
        android:id="@+id/flyesPic"
        android:layout_below="@+id/flyes"
        android:layout_margin="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/flyesPic"
        android:id="@+id/flyesExp"
        android:text="@string/shoulderFlyesExp"
        android:layout_marginTop="0dp"
        />



</RelativeLayout>
</ScrollView>