<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sam.gainsbysamcobcorperman.com.samuelstudios.gainsmaker.Abs"
    android:background="@android:color/holo_red_dark"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:layout_marginTop="8dp"
        ads:adUnitId="@string/banner_ad_unit_id4"
        android:layout_below="@+id/abDayExp">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abDay"
        android:layout_centerHorizontal="true"
        android:id="@+id/abDay"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abDayExp"
        android:layout_below="@+id/abDay"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:id="@+id/abDayExp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/adView1"
        android:text="@string/abRoller"
        android:layout_marginTop="24dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/abRoller"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/abroller2"
        android:layout_below="@+id/abRoller"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/abrollerPic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/abrollerPic"
        android:text="@string/abRollerExp"
        android:textColor="@color/white"
        android:id="@+id/abRollerExp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/abRollerExp"
        android:text="@string/legRaises"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/legRaises"
        android:textSize="16dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/legraisesold"
        android:layout_below="@+id/legRaises"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/legRaisesPic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/legRaisesPic"
        android:text="@string/legRaisesExp"
        android:textColor="@color/white"
        android:id="@+id/legRaisesExp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/legRaisesExp"
        android:text="@string/declCrunches"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/declCrunch"
        android:textSize="16dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/negativecrunch"
        android:layout_below="@+id/declCrunch"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/declCrunchPic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/declCrunchPic"
        android:text="@string/declCrunchesExp"
        android:id="@+id/declCrunchExp"
        android:textColor="@color/white"
        />


</RelativeLayout>
    </ScrollView>
